# findempty

./: MANIFEST.in  pyproject.toml  readme.rst  setup.py  test_scanner.py
findempty/: __init__.py  cli.py  config.py  default_config  scanner.py
findempty/testhelpers/: fs.py  tree.py
findempty/tests/: test_scanner.py
